--- a/Phonetic/Base.lproj/LaunchScreen.storyboard
+++ b/Phonetic/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,70 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wave_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="qh5-ZS-mbo">
+                                <rect key="frame" x="0.0" y="139" width="600" height="461"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_screen_progress_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Lew-5y-IoI">
+                                <rect key="frame" x="265" y="81" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="0ur-OG-tqc"/>
+                                    <constraint firstAttribute="height" constant="70" id="wfw-3H-fBm"/>
+                                </constraints>
+                            </imageView>
+                            <visualEffectView opaque="NO" alpha="0.93999999999999995" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XMu-WD-UfS">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="nkK-S6-AkB">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="19u-H0-1lT">
+                                            <rect key="frame" x="268" y="0.0" width="64" height="600"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOQ-RN-nmA">
+                                                    <rect key="frame" x="0.0" y="0.0" width="64" height="204.5"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_screen_phonetic_icon" translatesAutoresizingMaskIntoConstraints="NO" id="7xR-Yu-25P">
+                                                    <rect key="frame" x="0.0" y="204.5" width="64" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="55" id="23E-a0-8dB"/>
+                                                        <constraint firstAttribute="width" constant="64" id="utw-rf-sym"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zm9-tH-RnK">
+                                                    <rect key="frame" x="0.0" y="259.5" width="64" height="340.5"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="64" id="ClO-y5-znv"/>
+                                                <constraint firstItem="zm9-tH-RnK" firstAttribute="height" secondItem="AOQ-RN-nmA" secondAttribute="height" multiplier="5:3" id="tWI-Or-xbZ"/>
+                                            </constraints>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="19u-H0-1lT" secondAttribute="bottom" id="Axd-1c-HzO"/>
+                                        <constraint firstItem="19u-H0-1lT" firstAttribute="centerX" secondItem="nkK-S6-AkB" secondAttribute="centerX" id="FoT-g3-Y6T"/>
+                                        <constraint firstItem="19u-H0-1lT" firstAttribute="top" secondItem="nkK-S6-AkB" secondAttribute="top" id="aD7-JY-dKU"/>
+                                    </constraints>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qh5-ZS-mbo" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="139" id="EJd-48-Mt1"/>
+                            <constraint firstItem="qh5-ZS-mbo" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Jwj-Jp-WkV"/>
+                            <constraint firstItem="qh5-ZS-mbo" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="KuC-D6-ag8"/>
+                            <constraint firstItem="qh5-ZS-mbo" firstAttribute="top" secondItem="Lew-5y-IoI" secondAttribute="bottom" constant="-12" id="Ljd-rs-159"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="XMu-WD-UfS" secondAttribute="bottom" id="Pev-7N-Nkc"/>
+                            <constraint firstItem="XMu-WD-UfS" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="dXm-vG-OXp"/>
+                            <constraint firstItem="Lew-5y-IoI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gck-49-ADn"/>
+                            <constraint firstAttribute="trailing" secondItem="XMu-WD-UfS" secondAttribute="trailing" id="njS-0T-x7v"/>
+                            <constraint firstItem="XMu-WD-UfS" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="vOQ-ZF-jvC"/>
+                            <constraint firstAttribute="trailing" secondItem="qh5-ZS-mbo" secondAttribute="trailing" id="wR9-eb-gN8"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +87,9 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch_screen_phonetic_icon" width="85" height="73"/>
+        <image name="launch_screen_progress_placeholder" width="46" height="46"/>
+        <image name="wave_placeholder" width="960" height="400"/>
+    </resources>
 </document>
